--- a/lib/ext/psa_arch_tests/Kconfig
+++ b/lib/ext/psa_arch_tests/Kconfig
@@ -9,9 +9,7 @@ menu "PSA Arch Test"
 
 choice
     prompt "PSA API Test Suite"
-
-    config TEST_PSA_API_NONE
-        bool "None"
+    optional
 
     config TEST_PSA_API_IPC
         bool "IPC"
@@ -51,7 +49,6 @@ endchoice
 
 config TEST_PSA_API
     string
-    default "" if TEST_PSA_API_NONE
     default "IPC" if TEST_PSA_API_IPC
     default "CRYPTO" if TEST_PSA_API_CRYPTO
     default "INITIAL_ATTESTATION" if TEST_PSA_API_INITIAL_ATTESTATION
