Crypto: Decouple TF-M Crypto service from mbed TLS types and macros
Provide an abstraction layer towards the underlying crypto library
that implements the PSA Crypto core functionalities. Remove the
assumption that this library is mbed TLS, i.e. provide this
abstraction layer specifically for mbed TLS but could be implemented
for other crypto libraries as well, if needed, as generic as possible.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: I9f2690a749a01209c39acfce161d4953765e22ed

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -27,6 +27,7 @@ target_sources(tfm_psa_rot_partition_crypto
         crypto_key_derivation.c
         crypto_key_management.c
         crypto_rng.c
+        crypto_library.c
         tfm_mbedcrypto_builtin_keys.c
         $<$<BOOL:CRYPTO_TFM_BUILTIN_KEYS_DRIVER>:psa_driver_api/tfm_builtin_key_loader.c>
 )
