Build: Separate Kconfig system from CMake config system
The Kconfig system now has a separated routine rather than integrated
into the CMake Config system.
It is now easy to adjust the config steps for the Kconfig system without
impacting the CMake system.

Change-Id: I41e088a571448ab74ab9e669d73a623bc9af5e51
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,13 @@ include(remote_library)
 
 ############################ CONFIGURATION #####################################
 include(config/pre_config.cmake)
-include(config/set_config.cmake)
+
+if(USE_KCONFIG_TOOL)
+    include(${CMAKE_SOURCE_DIR}/config/kconfig.cmake)
+else()
+    include(${CMAKE_SOURCE_DIR}/config/set_config.cmake)
+endif()
+
 include(config/post_config.cmake)
 
 ############################### Compiler configuration #########################
