Build: Unify the coding style
Unify the coding style when including files in
CMAKE_MODULE_PATH folder.

Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: I77fd69f5cdb87d536e95b310754c25ea71f2dc87

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if(POLICY CMP0123)
 endif()
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
-include(cmake/version.cmake)
+include(version)
 include(remote_library)
 
 ############################ CONFIGURATION #####################################
