Kconfig: Add platform arch config options
The options are all promptless.
Platforms should select one of options for each item, such as
TFM_SYSTEM_ARCHITECTURE and TFM_SYSTEM_PROCESSOR.
Setting each item directly works as well.

Change-Id: I29c36fd64167e6fa13b6ab80de7f804af978793d
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -5,6 +5,8 @@
 #
 #-------------------------------------------------------------------------------
 
+rsource "Kconfig.arch"
+
 menu "Platform options"
 
 config PLATFORM_DEFAULT_BL1
@@ -59,4 +61,5 @@ config PLATFORM_DEFAULT_SYSTEM_RESET_HALT
 config PLATFORM_HAS_FIRMWARE_UPDATE_SUPPORT
     bool
     default n
+
 endmenu
