--- a/Kconfig
+++ b/Kconfig
@@ -5,64 +5,14 @@
 #
 #-------------------------------------------------------------------------------
 
+mainmenu "TF-M Configuration"
+
 # Load platform Kconfig file if exists
 osource "$(PLATFORM_PATH)/Kconfig"
 
 ################################# SPM ##########################################
 
-menu "SPM"
-config TFM_ISOLATION_LEVEL
-    int "Isolation level"
-    default 1
-    range 1 1 if CONFIG_TFM_SPM_BACKEND_SFN
-    range 1 3 if PLATFORM_HAS_ISOLATION_L3_SUPPORT
-    range 1 2
-
-choice
-    prompt "SPM Backend"
-    default CONFIG_TFM_SPM_BACKEND_SFN
-
-    config CONFIG_TFM_SPM_BACKEND_SFN
-        bool "SFN Backend"
-
-    config CONFIG_TFM_SPM_BACKEND_IPC
-        bool "IPC Backend"
-endchoice
-
-config CONFIG_TFM_SPM_BACKEND
-    string
-    default "IPC" if CONFIG_TFM_SPM_BACKEND_IPC
-    default "SFN" if CONFIG_TFM_SPM_BACKEND_SFN
-    default ""
-
-choice
-    prompt "Fault injection hardening profile"
-
-    config TFM_FIH_PROFILE_OFF
-        bool "OFF"
-
-    config TFM_FIH_PROFILE_LOW
-        bool "Low"
-
-    config TFM_FIH_PROFILE_MEDIUM
-        bool "Medium"
-
-    config TFM_FIH_PROFILE_HIGH
-        bool "High"
-endchoice
-
-config TFM_FIH_PROFILE
-    string
-    default "OFF" if TFM_FIH_PROFILE_OFF
-    default "LOW" if TFM_FIH_PROFILE_LOW
-    default "MEDIUM" if TFM_FIH_PROFILE_MEDIUM
-    default "HIGH" if TFM_FIH_PROFILE_HIGH
-
-config PSA_FRAMEWORK_HAS_MM_IOVEC
-    bool "Enable MM-IOVEC"
-    default n
-    depends on TFM_ISOLATION_LEVEL = 1
-endmenu
+rsource "secure_fw/spm/Kconfig"
 
 ################################# Secure partitions ############################
 
@@ -93,9 +43,9 @@ endmenu
 # shall be considered while adopting TF-M to other build systems.
 
 menu "TF-M component configs"
-rsource "secure_fw/spm/Kconfig"
+rsource "secure_fw/spm/Kconfig.comp"
 
 menu "Secure Partitions component configs"
-    rsource "secure_fw/partitions/*/Kconfig"
+    rsource "secure_fw/partitions/*/Kconfig.comp"
 endmenu
 endmenu
