--- a/secure_fw/spm/Kconfig
+++ b/secure_fw/spm/Kconfig
@@ -1,21 +1,60 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2022, Arm Limited. All rights reserved.
+# Copyright (c) 2022-2023, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
-menu "TF-M SPM component configs"
+menu "SPM"
+config TFM_ISOLATION_LEVEL
+    int "Isolation level"
+    default 1
+    range 1 1 if CONFIG_TFM_SPM_BACKEND_SFN
+    range 1 3 if PLATFORM_HAS_ISOLATION_L3_SUPPORT
+    range 1 2
 
-config CONFIG_TFM_CONN_HANDLE_MAX_NUM
-    int "Maximal number of handling secure services"
-    default 8
-    help
-      The maximal number of secure services that are connected or requested at
-      the same time
+choice
+    prompt "SPM Backend"
+    default CONFIG_TFM_SPM_BACKEND_SFN
 
-config CONFIG_TFM_DOORBELL_API
-    bool "Enable the doorbell APIs"
-    depends on CONFIG_TFM_SPM_BACKEND_IPC
-    default y
+    config CONFIG_TFM_SPM_BACKEND_SFN
+        bool "SFN Backend"
+
+    config CONFIG_TFM_SPM_BACKEND_IPC
+        bool "IPC Backend"
+endchoice
+
+config CONFIG_TFM_SPM_BACKEND
+    string
+    default "IPC" if CONFIG_TFM_SPM_BACKEND_IPC
+    default "SFN" if CONFIG_TFM_SPM_BACKEND_SFN
+    default ""
+
+choice
+    prompt "Fault injection hardening profile"
+
+    config TFM_FIH_PROFILE_OFF
+        bool "OFF"
+
+    config TFM_FIH_PROFILE_LOW
+        bool "Low"
+
+    config TFM_FIH_PROFILE_MEDIUM
+        bool "Medium"
+
+    config TFM_FIH_PROFILE_HIGH
+        bool "High"
+endchoice
+
+config TFM_FIH_PROFILE
+    string
+    default "OFF" if TFM_FIH_PROFILE_OFF
+    default "LOW" if TFM_FIH_PROFILE_LOW
+    default "MEDIUM" if TFM_FIH_PROFILE_MEDIUM
+    default "HIGH" if TFM_FIH_PROFILE_HIGH
+
+config PSA_FRAMEWORK_HAS_MM_IOVEC
+    bool "Enable MM-IOVEC"
+    default n
+    depends on TFM_ISOLATION_LEVEL = 1
 endmenu
