QCBOR: Use v1.2 release tag instead of hash
QCBOR v1.2 has been released, use the release tag as the
version reference instead of the commit hash value.

Change-Id: I6582f1031dcea5c0af88ef12e684e4909634d6af
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/lib/ext/qcbor/CMakeLists.txt
+++ b/lib/ext/qcbor/CMakeLists.txt
@@ -12,7 +12,7 @@ set(FETCHCONTENT_QUIET FALSE)
 
 # Default configuration of QCBOR repository
 set(QCBOR_PATH      "DOWNLOAD"  CACHE PATH      "Path to qcbor (or DOWNLOAD to fetch automatically")
-set(QCBOR_VERSION   "92d3f890"  CACHE STRING    "The version of qcbor to use")
+set(QCBOR_VERSION   "v1.2"      CACHE STRING    "The version of qcbor to use")
 
 # Entirely disable the floating-point support
 # in the qcbor library to reduce code size.
