--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -34,14 +34,14 @@ set(DOXYCFG_DOXYGEN_BUILD False)
 file(GLOB_RECURSE SPHINXCFG_DOC_FILES ${SPHINXCFG_SOURCE_PATH}/*.rst ${SPHINXCFG_SOURCE_PATH}/*.md)
 
 add_custom_target(tfm_docs_userguide_html ALL
-    COMMAND "${SPHINX_EXECUTABLE}" -W -b html -j auto -c ${SPHINXCFG_CONFIG_PATH} ${SPHINXCFG_SOURCE_PATH} "${SPHINXCFG_OUTPUT_PATH}/html"
+    COMMAND "${SPHINX_EXECUTABLE}" -W -b html -j 8 -c ${SPHINXCFG_CONFIG_PATH} ${SPHINXCFG_SOURCE_PATH} "${SPHINXCFG_OUTPUT_PATH}/html"
     WORKING_DIRECTORY ${SPHINXCFG_SOURCE_PATH}
     DEPENDS ${SPHINXCFG_DOC_FILES}
 )
 add_dependencies(docs tfm_docs_userguide_html)
 
 add_custom_target(tfm_docs_userguide_pdf ALL
-    COMMAND "${SPHINX_EXECUTABLE}" -W -b latex -j auto -c ${SPHINXCFG_CONFIG_PATH} ${SPHINXCFG_SOURCE_PATH} "${SPHINXCFG_OUTPUT_PATH}/latex"
+    COMMAND "${SPHINX_EXECUTABLE}" -W -b latex -j 8 -c ${SPHINXCFG_CONFIG_PATH} ${SPHINXCFG_SOURCE_PATH} "${SPHINXCFG_OUTPUT_PATH}/latex"
     COMMAND ${PDFLATEX_COMPILER} -output-directory "${SPHINXCFG_OUTPUT_PATH}/latex" TF-M.tex
     COMMAND ${CMAKE_COMMAND} -E copy "${SPHINXCFG_OUTPUT_PATH}/latex/TF-M.pdf" "${SPHINXCFG_OUTPUT_PATH}/tf-m_user_guide.pdf"
     WORKING_DIRECTORY ${SPHINXCFG_SOURCE_PATH}
