--- a/lib/ext/qcbor/CMakeLists.txt
+++ b/lib/ext/qcbor/CMakeLists.txt
@@ -23,6 +23,7 @@ set(QCBOR_OPT_DISABLE_FLOAT_ALL        ON  CACHE BOOL  "Eliminate floating-point
 fetch_remote_library(
     LIB_NAME                qcbor
     LIB_SOURCE_PATH_VAR     QCBOR_PATH
+    LIB_PATCH_DIR           ${CMAKE_CURRENT_LIST_DIR}
     LIB_BASE_DIR            "${CMAKE_BINARY_DIR}/lib/ext"
     FETCH_CONTENT_ARGS
         GIT_REPOSITORY      https://github.com/laurencelundblade/QCBOR.git
