Kconfig: Fix backend options missing prefixes
TFM_SPM_BACKEND_[IPC/SFN] misses the "CONFIG_" prefix.
The tfm_kconfig.py removes the "CONFIG_" prefix in the generated
project_config.cmake.
While the TFM_SPM_BACKEND_[IPC/SFN] have the prefix in the CMake System.
So the option names in Kconfig need to prefixed.

This patch fixes the missing ones.

This issue does not bring bugs because the
tfm_[ipc/sfn]_config_default.cmake will set the value for
CONFIG_TFM_BACKEND_[IPC/SFN] anyway.

Change-Id: If0207ac0b1d005c38d94173e9237dee867d82b5e
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/Kconfig
+++ b/Kconfig
@@ -14,25 +14,25 @@ menu "SPM"
 config TFM_ISOLATION_LEVEL
     int "Isolation level"
     default 1
-    range 1 1 if TFM_SPM_BACKEND_SFN
+    range 1 1 if CONFIG_TFM_SPM_BACKEND_SFN
     range 1 3 if PLATFORM_HAS_ISOLATION_L3_SUPPORT
     range 1 2
 
 choice
     prompt "SPM Backend"
-    default TFM_SPM_BACKEND_SFN
+    default CONFIG_TFM_SPM_BACKEND_SFN
 
-    config TFM_SPM_BACKEND_SFN
+    config CONFIG_TFM_SPM_BACKEND_SFN
         bool "SFN Backend"
 
-    config TFM_SPM_BACKEND_IPC
+    config CONFIG_TFM_SPM_BACKEND_IPC
         bool "IPC Backend"
 endchoice
 
 config CONFIG_TFM_SPM_BACKEND
     string
-    default "IPC" if TFM_SPM_BACKEND_IPC
-    default "SFN" if TFM_SPM_BACKEND_SFN
+    default "IPC" if CONFIG_TFM_SPM_BACKEND_IPC
+    default "SFN" if CONFIG_TFM_SPM_BACKEND_SFN
     default ""
 
 choice
