--- a/secure_fw/spm/Kconfig
+++ b/secure_fw/spm/Kconfig
@@ -16,6 +16,6 @@ config CONFIG_TFM_CONN_HANDLE_MAX_NUM
 
 config CONFIG_TFM_DOORBELL_API
     bool "Enable the doorbell APIs"
-    depends on TFM_SPM_BACKEND_IPC
+    depends on CONFIG_TFM_SPM_BACKEND_IPC
     default y
 endmenu
