SPM: Rename spm_ipc.h to spm.h
This file is also used in SFN backend.

Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: I4818edfbca3b84414db4ac5d7d8293f0e0c41276

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -15,7 +15,7 @@
 #include "config_tfm.h"
 #include "region.h"
 #include "region_defs.h"
-#include "spm_ipc.h"
+#include "spm.h"
 #include "load/interrupt_defs.h"
 #include "load/partition_defs.h"
 #include "load/service_defs.h"
