SPM: Create a dedicated source file for psa_call implementation
To support more granule source-level configurations, create a dedicated
source file for psa_call for the configuration system to select. This
patch changes psa_call first because it is the most frequent client API.

With these changes, users can know which sources are selected for their
configuration.

Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: If785ce50756215f31af2bfe7aa6895121745a03b

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2023, Arm Limited. All rights reserved.
 # Copyright (c) 2021-2022 Cypress Semiconductor Corporation (an Infineon
 # company) or an affiliate of Cypress Semiconductor Corporation. All rights
 # reserved.
@@ -44,6 +44,7 @@ target_sources(tfm_spm
         $<$<BOOL:${CONFIG_TFM_PSA_API_CROSS_CALL}>:cmsis_psa/spm_cross_call.c>
         cmsis_psa/static_loader.c
         ffm/psa_api.c
+        ffm/psa_call_api.c
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:ffm/backend_ipc.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_SFN}>:ffm/backend_sfn.c>
         $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:ffm/interrupt.c>
