SPM: Create source file for APIs needed by connection-based services
Create a dedicated source file to implement PSA APIs that are only
needed by connection-based services.

This patch moves the implementation of psa_connect, psa_close and
psa_set_rhandle to psa_connection_api.c

Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: I3556e3e1bfa11f15b768dfa2c728c88938e3c2ca

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -45,6 +45,7 @@ target_sources(tfm_spm
         cmsis_psa/static_loader.c
         ffm/psa_api.c
         ffm/psa_call_api.c
+        $<$<BOOL:${CONFIG_TFM_CONNECTION_BASED_SERVICE_API}>:ffm/psa_connection_api.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:ffm/backend_ipc.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_SFN}>:ffm/backend_sfn.c>
         $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:ffm/interrupt.c>
