SPM: Rename static_loader.c to rom_loader.c
Structures and functions in static_loader.c are used to load data in
ROM. So rename static_loader.c to rom_loader.c to make it easier to
understand.

Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: Ieaffa474c65b47d15ffd8bf5cf1197761f146bfd

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -42,7 +42,7 @@ target_sources(tfm_spm
         cmsis_psa/main.c
         cmsis_psa/spm_ipc.c
         $<$<BOOL:${CONFIG_TFM_PSA_API_CROSS_CALL}>:cmsis_psa/spm_cross_call.c>
-        cmsis_psa/static_loader.c
+        cmsis_psa/rom_loader.c
         ffm/psa_api.c
         ffm/psa_call_api.c
         ffm/psa_version_api.c
