SPM: Create a dedicated source file for PSA IRQ implementation
This patch moves PSA IRQ related implementation into psa_irq_api.c.

Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: I7105279d9d5b1deb5ec14834ab3a9d0ea10cf453

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -47,6 +47,7 @@ target_sources(tfm_spm
         ffm/psa_call_api.c
         ffm/psa_version_api.c
         $<$<BOOL:${CONFIG_TFM_CONNECTION_BASED_SERVICE_API}>:ffm/psa_connection_api.c>
+        $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:ffm/psa_irq_api.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:ffm/backend_ipc.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_SFN}>:ffm/backend_sfn.c>
         $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:ffm/interrupt.c>
