Kconfig: Add BL1 and BL2 Kconfig configs
bl1/Kconfig and bl2/ext/mcuboot/Kconfig are based on related
CMAKE config files. As these two modules join into the Kconfig
menu, CMAKE include process in kconfig.cmake can be dropped.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I288fabab9adb66028125fa0b7065e2e39e2420a5

--- a/Kconfig
+++ b/Kconfig
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2022, Arm Limited. All rights reserved.
+# Copyright (c) 2022-2023, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -9,6 +9,10 @@ mainmenu "TF-M Configuration"
 
 # Load platform Kconfig file if exists
 osource "$(PLATFORM_PATH)/Kconfig"
+
+################################# Bootloader ###################################
+
+rsource "Kconfig.bl"
 
 ################################# SPM ##########################################
 
