Kconfig: Refine SPM Kconfig configs
This patch mainly refines these points:

 - Add more SPM configs from config_base.cmake
 - Refine option name and help
 - Fix IPC/SFN backend option prefix

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I7eb362beeb266112086ed224aa8de7bff8f75467

--- a/lib/ext/tf-m-tests/Kconfig
+++ b/lib/ext/tf-m-tests/Kconfig
@@ -102,7 +102,7 @@ config TEST_S_IPC
 
 config TEST_S_SFN_BACKEND
     bool "SFN backend"
-    depends on TFM_SPM_BACKEND_SFN
+    depends on CONFIG_TFM_SPM_BACKEND_SFN
 
 config TEST_S_FPU
     bool "FPU"
@@ -196,7 +196,7 @@ config TEST_NS_IPC
 
 config TEST_NS_SFN_BACKEND
     bool "SFN backend"
-    depends on TFM_SPM_BACKEND_SFN
+    depends on CONFIG_TFM_SPM_BACKEND_SFN
 
 endmenu
 
