Kconfig: Refine Secure partitions Kconfig configs
This patch has made these changed:

 - Split root Kconfig file in partitions directory
 - Add more configs from config_base.cmake
 - Refine option prompt and help

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: Ic8e097bb375770725ae4283c13ac94582137bf59

--- a/bl2/ext/mcuboot/Kconfig
+++ b/bl2/ext/mcuboot/Kconfig
@@ -58,9 +58,11 @@ choice
 
     config MCUBOOT_UPGRADE_STRATEGY_SWAP_USING_SCRATCH
         bool "Swap using scratch"
+        imply FWU_SUPPORT_TRIAL_STATE
 
     config MCUBOOT_UPGRADE_STRATEGY_SWAP_USING_MOVE
         bool "Swap using move"
+        imply FWU_SUPPORT_TRIAL_STATE
 
     config MCUBOOT_UPGRADE_STRATEGY_DIRECT_XIP
         bool "Direct xip"
