Kconfig: Refine platform Kconfig configs
Add more configs from config_base.cmake and operate the
relationship like dependency with SPM and secure partition
configs. To make the structure clear, these configs are
modularized.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I82e46ff646acc4e569be841ff1541844fb463e0d

--- a/lib/ext/tf-m-tests/Kconfig
+++ b/lib/ext/tf-m-tests/Kconfig
@@ -106,6 +106,7 @@ config TEST_S_SFN_BACKEND
 
 config TEST_S_FPU
     bool "FPU"
+    depends on CONFIG_TFM_ENABLE_FP
     default n
 endmenu
 
@@ -188,6 +189,7 @@ endchoice
 
 config TEST_NS_FPU
     bool "FPU"
+    depends on CONFIG_TFM_ENABLE_FP
     default n
 
 config TEST_NS_IPC
