--- a/secure_fw/spm/Kconfig
+++ b/secure_fw/spm/Kconfig
@@ -76,6 +76,7 @@ config TFM_CODE_SHARING
     bool "Enable code sharing between MCUboot and secure firmware"
     #FIXME: Shall check IAR
     default n
+    depends on !CRYPTO_HW_ACCELERATOR
 
 config TFM_EXCEPTION_INFO_DUMP
     bool "Exception information dump"
