Kconfig: Add more configs from config_base.cmake
These configs belonging to system are included in
Kconfig.conf. This patch also refines the content in
Kconfig.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I261779f3410343d3b02f588e073f45a20e1e28f0

--- a/Kconfig
+++ b/Kconfig
@@ -10,24 +10,15 @@ mainmenu "TF-M Configuration"
 # Load platform Kconfig file if exists
 osource "$(PLATFORM_PATH)/Kconfig"
 
-################################# Bootloader ###################################
+################################# System options ###############################
 
 rsource "Kconfig.bl"
-
-################################# SPM ##########################################
-
 rsource "secure_fw/spm/Kconfig"
-
-################################# Secure partitions ############################
-
-# These are partition switches.
-rsource "secure_fw/partitions/Kconfig"
-
-################################# Platforms ####################################
-
+rsource "secure_fw/partitions/Kconfig" # These are partition switches.
 rsource "platform/Kconfig"
+rsource "Kconfig.misc"
 
-################################# TEST #########################################
+################################# Test options #################################
 
 menu "TF-M tests"
 rsource "lib/ext/tf-m-tests/Kconfig"
