Kconfig: Add secure log support
Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I1d86289a85443ea98c289fcb0671b8792929e3a4

--- a/secure_fw/partitions/Kconfig
+++ b/secure_fw/partitions/Kconfig
@@ -38,4 +38,9 @@ config TFM_PARTITION_LOG_LEVEL
     default 1 if PARTITION_LOG_LEVEL_ERROR
     default 0 if PARTITION_LOG_LEVEL_SILENCE
 
+config TFM_SP_LOG_RAW_ENABLED
+    bool
+    default y if TFM_PARTITION_LOG_LEVEL != 0 || TFM_S_REG_TEST || TFM_NS_REG_TEST
+    default n
+
 endmenu
