Kconfig: Add build type support
Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: Id66fb82d8f3f3e406111c86040cbaac8f2076bba

--- a/Kconfig
+++ b/Kconfig
@@ -9,6 +9,7 @@ mainmenu "TF-M Configuration"
 
 # Load platform Kconfig file if exists
 osource "$(PLATFORM_PATH)/Kconfig"
+osource "$(TFM_SOURCE_DIR)/config/build_type/Kconfig.$(CMAKE_BUILD_TYPE)"
 
 ################################# System options ###############################
 
