Crypto: Fix crypto init for any legacy driver
Change-Id: I5192c8e8cb1edaae38ed852f53906a24b3c71553
Signed-off-by: Michel Jaouen <michel.jaouen@st.com>

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -241,6 +241,7 @@ if (TFM_PARTITION_CRYPTO)
         PUBLIC
             CRYPTO_HW_ACCELERATOR
             MBEDTLS_ECDH_LEGACY_CONTEXT
+            $<$<BOOL:${CC312_LEGACY_DRIVER_API_ENABLED}>:LEGACY_DRIVER_API_ENABLED>
             $<$<BOOL:${CC312_LEGACY_DRIVER_API_ENABLED}>:CC312_LEGACY_DRIVER_API_ENABLED>
     )
 
