Build: Use libflash_drivers in musca_b1 linker scripts
* Updated libflash_drivers attributes in scatter files
* Fixed startup file name in bl2 linker
* Updated Nuvoton secure scatter files

Signed-off-by: Dávid Házi <david.hazi@arm.com>
Change-Id: If27985715b66b9558a4435fc73ac990a9242ddfa

--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -262,7 +262,7 @@ LR_CODE S_CODE_START S_CODE_SIZE {
 #if defined(S_RAM_CODE_START)
     /* Flash drivers code that gets copied from Flash */
     ER_CODE_SRAM S_RAM_CODE_START ALIGN 4 {
-        *libflash_drivers* (.text, .text.*, .rodata, .rodata.*)
+        *libflash_drivers* (+RO)
         * (.ramfunc)
     }
 
