--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -99,9 +99,9 @@ SECTIONS
         LONG (SIZEOF(.ER_{{partition.manifest.name}}_RWZI) / 4)
 {% endfor %}
 #if defined(S_RAM_CODE_START)
-        LONG (LOADADDR(.ER_EFLASH_DRIVER_RO))
-        LONG (ADDR(.ER_EFLASH_DRIVER_RO))
-        LONG (SIZEOF(.ER_EFLASH_DRIVER_RO) / 4)
+        LONG (LOADADDR(.ER_CODE_SRAM))
+        LONG (ADDR(.ER_CODE_SRAM))
+        LONG (SIZEOF(.ER_CODE_SRAM) / 4)
 #endif
 
         __copy_table_end__ = .;
@@ -202,8 +202,8 @@ SECTIONS
         KEEP(*(.ramfunc))
         . = ALIGN(4); /* This alignment is needed to make the section size 4 bytes aligned */
     } > CODE_RAM AT > FLASH
-    Image$$ER_EFLASH_DRIVER_RO$$Base = ADDR(.ER_EFLASH_DRIVER_RO);
-    Image$$ER_EFLASH_DRIVER_RO$$Limit = ADDR(.ER_EFLASH_DRIVER_RO) + SIZEOF(.ER_EFLASH_DRIVER_RO);
+    Image$$ER_CODE_SRAM$$Base = ADDR(.ER_CODE_SRAM);
+    Image$$ER_CODE_SRAM$$Limit = ADDR(.ER_CODE_SRAM) + SIZEOF(.ER_CODE_SRAM);
 #endif
 
     .ER_TFM_CODE : ALIGN(4)
