--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -187,8 +187,8 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
 #if TFM_LVL == 3
     .assets                         = {
         {
-            .mem.start              = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_START$$Base),
-            .mem.limit              = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_END$$Base),
+            .mem.start              = (uintptr_t)&REGION_NAME(Image$$, PT_{{manifest.name}}_PRIVATE, _DATA_START$$Base),
+            .mem.limit              = (uintptr_t)&REGION_NAME(Image$$, PT_{{manifest.name}}_PRIVATE, _DATA_END$$Base),
             .attr                   = ASSET_ATTR_READ_WRITE,
         },
 {% if counter.asset_counter > 0 %}
