Build: Add check for TFM_PXN_ENABLE
TFM_PXN_ENABLE is a feature depends on armv8.1-m arch. The
previous realization will skip add the compile option when
the arch is not armv8.1-m but developers cannot get the
warning as expected.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: Iae6a874a3568ec5fa2dcee24bc6cbaede342ac3f

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -117,7 +117,7 @@ target_compile_definitions(platform_s
         $<$<BOOL:${OTP_NV_COUNTERS_RAM_EMULATION}>:OTP_NV_COUNTERS_RAM_EMULATION>
         $<$<BOOL:${TFM_EXCEPTION_INFO_DUMP}>:TFM_EXCEPTION_INFO_DUMP>
         $<$<OR:$<VERSION_GREATER:${TFM_ISOLATION_LEVEL},1>,$<STREQUAL:"${TEST_PSA_API}","IPC">>:CONFIG_TFM_ENABLE_MEMORY_PROTECT>
-        $<$<AND:$<BOOL:${TFM_PXN_ENABLE}>,$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv8.1-m.main>>:TFM_PXN_ENABLE>
+        $<$<BOOL:${TFM_PXN_ENABLE}>:TFM_PXN_ENABLE>
         $<$<STREQUAL:${CONFIG_TFM_FLOAT_ABI},hard>:CONFIG_TFM_FLOAT_ABI=2>
         $<$<STREQUAL:${CONFIG_TFM_FLOAT_ABI},soft>:CONFIG_TFM_FLOAT_ABI=0>
         $<$<BOOL:${CONFIG_TFM_LAZY_STACKING}>:CONFIG_TFM_LAZY_STACKING>
