--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -23,58 +23,57 @@ target_include_directories(tfm_spm
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}
         ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/cmsis_psa
-        ${CMAKE_CURRENT_SOURCE_DIR}/cmsis_psa/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/core
     PRIVATE
         ${CMAKE_SOURCE_DIR}
         ${CMAKE_SOURCE_DIR}/secure_fw/include
         ${CMAKE_BINARY_DIR}/generated
         ${CMAKE_BINARY_DIR}/generated/secure_fw/spm/include
-        ${CMAKE_BINARY_DIR}/generated/secure_fw/spm/cmsis_psa
+        ${CMAKE_BINARY_DIR}/generated/secure_fw/spm/core
 )
 
 target_sources(tfm_spm
     PRIVATE
-        ffm/tfm_boot_data.c
-        ffm/utilities.c
-        $<$<NOT:$<STREQUAL:${TFM_SPM_LOG_LEVEL},TFM_SPM_LOG_LEVEL_SILENCE>>:ffm/spm_log.c>
-        cmsis_psa/arch/tfm_arch.c
-        cmsis_psa/main.c
-        cmsis_psa/spm_ipc.c
-        $<$<BOOL:${CONFIG_TFM_PSA_API_CROSS_CALL}>:cmsis_psa/spm_cross_call.c>
-        cmsis_psa/rom_loader.c
-        ffm/psa_api.c
-        ffm/psa_call_api.c
-        ffm/psa_version_api.c
-        ffm/psa_read_write_skip_api.c
-        $<$<BOOL:${PSA_FRAMEWORK_HAS_MM_IOVEC}>:ffm/psa_mmiovec_api.c>
-        $<$<BOOL:${CONFIG_TFM_CONNECTION_BASED_SERVICE_API}>:ffm/psa_connection_api.c>
-        $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:ffm/psa_irq_api.c>
-        $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:ffm/backend_ipc.c>
-        $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_SFN}>:ffm/backend_sfn.c>
-        $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:ffm/interrupt.c>
-        $<$<BOOL:${CONFIG_TFM_STACK_WATERMARKS}>:ffm/stack_watermark.c>
-        cmsis_psa/tfm_core_svcalls_ipc.c
-        cmsis_psa/tfm_pools.c
-        $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:cmsis_psa/thread.c>
+        core/tfm_boot_data.c
+        core/utilities.c
+        $<$<NOT:$<STREQUAL:${TFM_SPM_LOG_LEVEL},TFM_SPM_LOG_LEVEL_SILENCE>>:core/spm_log.c>
+        core/arch/tfm_arch.c
+        core/main.c
+        core/spm_ipc.c
+        $<$<BOOL:${CONFIG_TFM_PSA_API_CROSS_CALL}>:core/spm_cross_call.c>
+        core/rom_loader.c
+        core/psa_api.c
+        core/psa_call_api.c
+        core/psa_version_api.c
+        core/psa_read_write_skip_api.c
+        $<$<BOOL:${PSA_FRAMEWORK_HAS_MM_IOVEC}>:core/psa_mmiovec_api.c>
+        $<$<BOOL:${CONFIG_TFM_CONNECTION_BASED_SERVICE_API}>:core/psa_connection_api.c>
+        $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:core/psa_irq_api.c>
+        $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:core/backend_ipc.c>
+        $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_SFN}>:core/backend_sfn.c>
+        $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:core/interrupt.c>
+        $<$<BOOL:${CONFIG_TFM_STACK_WATERMARKS}>:core/stack_watermark.c>
+        core/tfm_core_svcalls_ipc.c
+        core/tfm_pools.c
+        $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:core/thread.c>
         $<$<BOOL:${TFM_NS_MANAGE_NSID}>:ns_client_ext/tfm_ns_ctx.c>
         ns_client_ext/tfm_spm_ns_ctx.c
         #TODO add other arches
-        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv8.1-m.main>:cmsis_psa/arch/tfm_arch_v8m_main.c>
-        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv8-m.base>:cmsis_psa/arch/tfm_arch_v8m_base.c>
-        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv8-m.main>:cmsis_psa/arch/tfm_arch_v8m_main.c>
-        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv6-m>:cmsis_psa/arch/tfm_arch_v6m_v7m.c>
-        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv7-m>:cmsis_psa/arch/tfm_arch_v6m_v7m.c>
+        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv8.1-m.main>:core/arch/tfm_arch_v8m_main.c>
+        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv8-m.base>:core/arch/tfm_arch_v8m_base.c>
+        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv8-m.main>:core/arch/tfm_arch_v8m_main.c>
+        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv6-m>:core/arch/tfm_arch_v6m_v7m.c>
+        $<$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv7-m>:core/arch/tfm_arch_v6m_v7m.c>
         ${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_nvic.c
 )
 
 target_include_directories(tfm_spm_defs
     INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}/cmsis_psa
+        ${CMAKE_CURRENT_SOURCE_DIR}/core
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/boot>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/interface>
-        ${CMAKE_CURRENT_SOURCE_DIR}/cmsis_psa/arch
+        ${CMAKE_CURRENT_SOURCE_DIR}/core/arch
 )
 
 target_link_libraries(tfm_spm
@@ -122,7 +121,7 @@ set_source_files_properties(tfm_secure_api.c
 
 target_include_directories(tfm_arch
     INTERFACE
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cmsis_psa/arch>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/core/arch>
 )
 
 ############################ Boot Status #######################################
