RSS: Align provisioning to spec
Move provisioning code into the bundle. Finalize split of data items
into CM and DM. Tweak secure provisioning mode logic to enable encrypted
bundles in future.

Change-Id: I4fbb12cf3e406540d261f371243816704c870114
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/bl1/bl1_1/CMakeLists.txt
+++ b/bl1/bl1_1/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2021-2022, Arm Limited. All rights reserved.
+# Copyright (c) 2021-2023, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -84,26 +84,28 @@ add_custom_command(OUTPUT bl1_2_padded.bin bl1_2_padded_hash.bin
 
 ################################################################################
 
-add_custom_target(bl1_provisioning_bundle
-    ALL
-    SOURCES bl1_provisioning_bundle.bin
-)
+if (TFM_BL1_DEFAULT_PROVISIONING)
+    add_custom_target(bl1_provisioning_bundle
+        ALL
+        SOURCES bl1_provisioning_bundle.bin
+    )
 
-add_custom_command(OUTPUT bl1_provisioning_bundle.bin
-    DEPENDS ${TFM_BL2_ENCRYPTION_KEY_PATH}
-    DEPENDS ${TFM_GUK_PATH}
-    DEPENDS $<TARGET_FILE_DIR:bl1_2>/bl1_2_padded_hash.bin
-    DEPENDS $<TARGET_FILE_DIR:bl2>/bl2_signed_hash.bin
-    DEPENDS $<TARGET_FILE_DIR:bl1_2>/bl1_2_padded.bin
-    bl1_2_padded_bin bl2_signed_bin
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/create_provisioning_bundle.py
-    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/scripts/create_provisioning_bundle.py
-                    --bl2_encryption_key_input_file ${TFM_BL2_ENCRYPTION_KEY_PATH}
-                    --bl2_signing_key_input_file ${TFM_BL2_SIGNING_KEY_PATH}
-                    --guk_input_file ${TFM_GUK_PATH}
-                    --bl1_2_padded_hash_input_file $<TARGET_FILE_DIR:bl1_2>/bl1_2_padded_hash.bin
-                    --bl2_signed_hash_input_file $<TARGET_FILE_DIR:bl2>/bl2_signed_hash.bin
-                    --bl1_2_input_file $<TARGET_FILE_DIR:bl1_2>/bl1_2_padded.bin
-                    --bundle_output_file bl1_provisioning_bundle.bin
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/bl1_provisioning_bundle.bin $<TARGET_FILE_DIR:bl1_1>
-)
+    add_custom_command(OUTPUT bl1_provisioning_bundle.bin
+        DEPENDS ${TFM_BL2_ENCRYPTION_KEY_PATH}
+        DEPENDS ${TFM_GUK_PATH}
+        DEPENDS $<TARGET_FILE_DIR:bl1_2>/bl1_2_padded_hash.bin
+        DEPENDS $<TARGET_FILE_DIR:bl2>/bl2_signed_hash.bin
+        DEPENDS $<TARGET_FILE_DIR:bl1_2>/bl1_2_padded.bin
+        bl1_2_padded_bin bl2_signed_bin
+        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/create_provisioning_bundle.py
+        COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/scripts/create_provisioning_bundle.py
+                        --bl2_encryption_key_input_file ${TFM_BL2_ENCRYPTION_KEY_PATH}
+                        --bl2_signing_key_input_file ${TFM_BL2_SIGNING_KEY_PATH}
+                        --guk_input_file ${TFM_GUK_PATH}
+                        --bl1_2_padded_hash_input_file $<TARGET_FILE_DIR:bl1_2>/bl1_2_padded_hash.bin
+                        --bl2_signed_hash_input_file $<TARGET_FILE_DIR:bl2>/bl2_signed_hash.bin
+                        --bl1_2_input_file $<TARGET_FILE_DIR:bl1_2>/bl1_2_padded.bin
+                        --bundle_output_file bl1_provisioning_bundle.bin
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/bl1_provisioning_bundle.bin $<TARGET_FILE_DIR:bl1_1>
+    )
+endif()
