Crypto: Update to Mbed TLS 3.4.0
Update Mbed TLS to v3.4.0

Signed-off-by: Summer Qin <summer.qin@arm.com>
Change-Id: I3d550bf7614868e0657ffebb1f307187384df1a6

--- a/bl1/bl1_2/lib/CMakeLists.txt
+++ b/bl1/bl1_2/lib/CMakeLists.txt
@@ -23,6 +23,7 @@ target_sources(bl1_2_lib
         $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/library/lms.c>
         $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/library/lmots.c>
         $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/library/platform_util.c>
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/library/psa_util.c>
         ./image.c
 )
 
